chandeliers-lus/tests/compile_fail/ui/tc/ops/unop-wrong.stderr
error: Unary operator `not` expects an argument of type bool or int, found float
 --> tests/compile_fail/ui/tc/ops/unop-wrong.rs:3:23
  |
3 |     const X : float = not 4.0;
  |                       ^^^^^^^
  |
note: The inner value is found to be of type float
 --> tests/compile_fail/ui/tc/ops/unop-wrong.rs:3:27
  |
3 |     const X : float = not 4.0;
  |                           ^^^

error: Unary operator `-` expects an argument of type int or float, found bool
 --> tests/compile_fail/ui/tc/ops/unop-wrong.rs:7:22
  |
7 |     const B : bool = -true;
  |                      ^^^^^
  |
note: The inner value is found to be of type bool
 --> tests/compile_fail/ui/tc/ops/unop-wrong.rs:7:23
  |
7 |     const B : bool = -true;
  |                       ^^^^
